testdata/extauth/want-static.yaml
# Generated by esgw. DO NOT EDIT.
# config_version: 0838ae14c295
admin:
  address:
    pipe:
      path: /tmp/esgw-admin.sock
node:
  cluster: esgw
  id: esgw
  metadata:
    esgw.config_version: 0838ae14c295
static_resources:
  clusters:
    - connect_timeout: 5s
      load_assignment:
        cluster_name: extauth/1a3678b8e20a
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 19001
      name: extauth/1a3678b8e20a
      type: STATIC
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
    - connect_timeout: 5s
      load_assignment:
        cluster_name: extauth/fe12f2e6ce6c
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 19000
      name: extauth/fe12f2e6ce6c
      type: STATIC
    - connect_timeout: 5s
      load_assignment:
        cluster_name: us/app
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 18080
      name: us/app
      type: STATIC
  listeners:
    - address:
        socket_address:
          address: 127.0.0.1
          port_value: 18082
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                common_http_protocol_options:
                  idle_timeout: 60s
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      grpc_service:
                        envoy_grpc:
                          cluster_name: extauth/1a3678b8e20a
                        timeout: 5s
                      transport_api_version: V3
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: local_ratelimit
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                max_request_headers_kb: 60
                route_config:
                  name: rc/grpc-auth
                  virtual_hosts:
                    - domains:
                        - '*'
                      name: vh/grpc-api
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: us/app
                            timeout: 15s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              check_settings: {}
                server_name: esgw
                stat_prefix: lis/grpc-auth
                strip_any_host_port: true
      name: lis/grpc-auth
    - address:
        socket_address:
          address: 127.0.0.1
          port_value: 18081
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                common_http_protocol_options:
                  idle_timeout: 60s
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      failure_mode_allow: true
                      http_service:
                        path_prefix: /verify
                        server_uri:
                          cluster: extauth/fe12f2e6ce6c
                          timeout: 5s
                          uri: http://127.0.0.1:19000
                      transport_api_version: V3
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: local_ratelimit
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                max_request_headers_kb: 60
                route_config:
                  name: rc/http-auth
                  virtual_hosts:
                    - domains:
                        - '*'
                      name: vh/http-api
                      routes:
                        - match:
                            prefix: /public
                          route:
                            cluster: us/app
                            timeout: 15s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: /
                          route:
                            cluster: us/app
                            timeout: 15s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              check_settings: {}
                server_name: esgw
                stat_prefix: lis/http-auth
                strip_any_host_port: true
      name: lis/http-auth
