testdata/extauth/want-xds.json
{
  "clusters": {
    "extauth/1a3678b8e20a": {
      "connect_timeout": "5s",
      "eds_cluster_config": {
        "eds_config": {
          "ads": {}
        }
      },
      "name": "extauth/1a3678b8e20a",
      "type": "EDS",
      "typed_extension_protocol_options": {
        "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
          "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
          "explicit_http_config": {
            "http2_protocol_options": {}
          }
        }
      }
    },
    "extauth/fe12f2e6ce6c": {
      "connect_timeout": "5s",
      "eds_cluster_config": {
        "eds_config": {
          "ads": {}
        }
      },
      "name": "extauth/fe12f2e6ce6c",
      "type": "EDS"
    },
    "us/app": {
      "connect_timeout": "5s",
      "eds_cluster_config": {
        "eds_config": {
          "ads": {}
        }
      },
      "name": "us/app",
      "type": "EDS"
    }
  },
  "endpoints": {
    "extauth/1a3678b8e20a": {
      "cluster_name": "extauth/1a3678b8e20a",
      "endpoints": [
        {
          "lb_endpoints": [
            {
              "endpoint": {
                "address": {
                  "socket_address": {
                    "address": "127.0.0.1",
                    "port_value": 19001
                  }
                }
              }
            }
          ]
        }
      ]
    },
    "extauth/fe12f2e6ce6c": {
      "cluster_name": "extauth/fe12f2e6ce6c",
      "endpoints": [
        {
          "lb_endpoints": [
            {
              "endpoint": {
                "address": {
                  "socket_address": {
                    "address": "127.0.0.1",
                    "port_value": 19000
                  }
                }
              }
            }
          ]
        }
      ]
    },
    "us/app": {
      "cluster_name": "us/app",
      "endpoints": [
        {
          "lb_endpoints": [
            {
              "endpoint": {
                "address": {
                  "socket_address": {
                    "address": "127.0.0.1",
                    "port_value": 18080
                  }
                }
              }
            }
          ]
        }
      ]
    }
  },
  "listeners": {
    "lis/grpc-auth": {
      "address": {
        "socket_address": {
          "address": "127.0.0.1",
          "port_value": 18082
        }
      },
      "filter_chains": [
        {
          "filters": [
            {
              "name": "envoy.filters.network.http_connection_manager",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                "common_http_protocol_options": {
                  "idle_timeout": "60s"
                },
                "http_filters": [
                  {
                    "name": "envoy.filters.http.rbac",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC"
                    }
                  },
                  {
                    "name": "envoy.filters.http.cors",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors"
                    }
                  },
                  {
                    "name": "envoy.filters.http.jwt_authn",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication"
                    }
                  },
                  {
                    "name": "envoy.filters.http.ext_authz",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz",
                      "grpc_service": {
                        "envoy_grpc": {
                          "cluster_name": "extauth/1a3678b8e20a"
                        },
                        "timeout": "5s"
                      },
                      "transport_api_version": "V3"
                    }
                  },
                  {
                    "name": "envoy.filters.http.local_ratelimit",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit",
                      "stat_prefix": "local_ratelimit"
                    }
                  },
                  {
                    "name": "envoy.filters.http.router",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                    }
                  }
                ],
                "max_request_headers_kb": 60,
                "rds": {
                  "config_source": {
                    "ads": {}
                  },
                  "route_config_name": "rc/grpc-auth"
                },
                "server_name": "esgw",
                "stat_prefix": "lis/grpc-auth",
                "strip_any_host_port": true
              }
            }
          ]
        }
      ],
      "name": "lis/grpc-auth"
    },
    "lis/http-auth": {
      "address": {
        "socket_address": {
          "address": "127.0.0.1",
          "port_value": 18081
        }
      },
      "filter_chains": [
        {
          "filters": [
            {
              "name": "envoy.filters.network.http_connection_manager",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                "common_http_protocol_options": {
                  "idle_timeout": "60s"
                },
                "http_filters": [
                  {
                    "name": "envoy.filters.http.rbac",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC"
                    }
                  },
                  {
                    "name": "envoy.filters.http.cors",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors"
                    }
                  },
                  {
                    "name": "envoy.filters.http.jwt_authn",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication"
                    }
                  },
                  {
                    "name": "envoy.filters.http.ext_authz",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz",
                      "failure_mode_allow": true,
                      "http_service": {
                        "path_prefix": "/verify",
                        "server_uri": {
                          "cluster": "extauth/fe12f2e6ce6c",
                          "timeout": "5s",
                          "uri": "http://127.0.0.1:19000"
                        }
                      },
                      "transport_api_version": "V3"
                    }
                  },
                  {
                    "name": "envoy.filters.http.local_ratelimit",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit",
                      "stat_prefix": "local_ratelimit"
                    }
                  },
                  {
                    "name": "envoy.filters.http.router",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                    }
                  }
                ],
                "max_request_headers_kb": 60,
                "rds": {
                  "config_source": {
                    "ads": {}
                  },
                  "route_config_name": "rc/http-auth"
                },
                "server_name": "esgw",
                "stat_prefix": "lis/http-auth",
                "strip_any_host_port": true
              }
            }
          ]
        }
      ],
      "name": "lis/http-auth"
    }
  },
  "routes": {
    "rc/grpc-auth": {
      "name": "rc/grpc-auth",
      "virtual_hosts": [
        {
          "domains": [
            "*"
          ],
          "name": "vh/grpc-api",
          "routes": [
            {
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "us/app",
                "timeout": "15s"
              },
              "typed_per_filter_config": {
                "envoy.filters.http.ext_authz": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute",
                  "check_settings": {}
                }
              }
            }
          ]
        }
      ]
    },
    "rc/http-auth": {
      "name": "rc/http-auth",
      "virtual_hosts": [
        {
          "domains": [
            "*"
          ],
          "name": "vh/http-api",
          "routes": [
            {
              "match": {
                "prefix": "/public"
              },
              "route": {
                "cluster": "us/app",
                "timeout": "15s"
              },
              "typed_per_filter_config": {
                "envoy.filters.http.ext_authz": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute",
                  "disabled": true
                }
              }
            },
            {
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "us/app",
                "timeout": "15s"
              },
              "typed_per_filter_config": {
                "envoy.filters.http.ext_authz": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute",
                  "check_settings": {}
                }
              }
            }
          ]
        }
      ]
    }
  },
  "secrets": {},
  "version": "46aeb7af75a6"
}
